# image-similarity-measures

./: .gitignore  LICENSE  README-dev.md  README.md  catalog-info.yaml  pyproject.toml  requirements.txt  requirements_extras.txt  setup.py  setup.sh
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: python.yml  techdocs.yml
example/: lafayette_org.tif  lafayette_pred.tif  singapore_org.tif  singapore_pred.tif
image_similarity_measures/: __init__.py  evaluate.py  quality_metrics.py
src/: evaluate.py  quality_metrics.py
tests/: conftest.py  test_quality_metrics.py
