[tool.poetry]
name = "image-similarity-measures"
version = "0.3.7"
description = "Evaluation metrics to assess the similarity between two images."
authors = ["UP42 <support@up42.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "image_similarity_measures"}]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
]
[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
rasterio = "^1.3.6"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.24.2"
scikit-image = "^0.21.0"
scipy = "^1.11.2"
opencv-python = "^4.7.0.72"
phasepack = "^1.5"

[tool.poetry.extras]
rasterio = ["rasterio"]
speedups = ["pyfftw"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image-similarity-measures = "image_similarity_measures.evaluate:main"
